--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,1 +1,14 @@
-<p>store works!</p>
+<div class="jumbotron bg-info text-white text-center header img-responsive">
+    <h1> {{ title}} </h1>
+    
+</div>
+<div class="container-fluid">
+   
+    <div class="row text-white">
+        <div class="col-sm-3 bg-info p-2 my-1"> {{categories.length}} Categories</div>
+        
+        <div class="col-sm-9 bg-success p-2 my-1"> {{products.length}} Products</div>
+    </div>
+
+
+</div>
