--- a/src/app/store/store.component.css
+++ b/src/app/store/store.component.css
@@ -25,3 +25,28 @@ h1 {
     position: relative;
     
 }
+
+.card-image-top{
+    width: 100%;
+    height: 11vw;
+    object-fit: cover;
+}
+
+.product {
+    transition: transform .2s,;
+}
+
+.product:hover {
+    transform: scale(1.05);
+}
+
+@media only screen and (max-width: 500px) {
+    img{
+        display: block;
+        width: 100px;
+        height:100px;
+        
+    }
+}
+
+
